# swarm_robots

./: .gitignore  .travis.yaml  CMakeLists.txt  Doxyfile  Doxyfile.bak  LICENSE  README.md  package.xml  setup.sh
Results/: cppcheckoutput.txt  cpplintoutput.txt
action/: swarmACT.action
docs/html/: agent_8cpp__incl.map  agent_8cpp__incl.md5  agent_8hpp__dep__incl.map  agent_8hpp__dep__incl.md5  agent_8hpp__incl.map  agent_8hpp__incl.md5  agent__node_8cpp__incl.map  agent__node_8cpp__incl.md5  agent__node_8hpp__dep__incl.map  agent__node_8hpp__dep__incl.md5  agent__node_8hpp__incl.map  agent__node_8hpp__incl.md5  annotated_dup.js  arena_8cpp__incl.map  arena_8cpp__incl.md5  arena_8hpp__dep__incl.map  arena_8hpp__dep__incl.md5  arena_8hpp__incl.map  arena_8hpp__incl.md5  atomic__configure_2__setup__util_8py.js  catkin__generated_2installspace_2__setup__util_8py.js  classAgent.js  classAgentNode.js  classAgentNode__coll__graph.map  classAgentNode__coll__graph.md5  classAgentNode__inherit__graph.map  classAgentNode__inherit__graph.md5  classAgent__coll__graph.map  classAgent__coll__graph.md5  classAgent__inherit__graph.map  classAgent__inherit__graph.md5  classArena.js  classForwardKinematics.js  classInverseKinematics.js  classObstacle.js  classPathPlanner.js  classPathPlanner__coll__graph.map  classPathPlanner__coll__graph.md5  classSafetyCheck.js  classState.js  (+95 more)
docs/latex/: agent_8cpp__incl.md5  agent_8hpp__dep__incl.md5  agent_8hpp__incl.md5  agent__node_8cpp__incl.md5  agent__node_8hpp__dep__incl.md5  agent__node_8hpp__incl.md5  arena_8cpp__incl.md5  arena_8hpp__dep__incl.md5  arena_8hpp__incl.md5  classAgentNode__coll__graph.md5  classAgentNode__inherit__graph.md5  classAgent__coll__graph.md5  classAgent__inherit__graph.md5  classPathPlanner__coll__graph.md5  classSwarmMaster__coll__graph.md5  forward__kinematics_8cpp__incl.md5  forward__kinematics_8hpp__dep__incl.md5  forward__kinematics_8hpp__incl.md5  inverse__kinematics_8cpp__incl.md5  inverse__kinematics_8hpp__dep__incl.md5  inverse__kinematics_8hpp__incl.md5  obstacle_8cpp__incl.md5  obstacle_8hpp__dep__incl.md5  obstacle_8hpp__incl.md5  path__planner_8cpp__incl.md5  path__planner_8hpp__dep__incl.md5  path__planner_8hpp__incl.md5  safety__check_8cpp__incl.md5  safety__check_8hpp__dep__incl.md5  safety__check_8hpp__incl.md5  src_2main_8cpp__incl.md5  state_8cpp__incl.md5  state_8hpp__dep__incl.md5  swarm__master_8cpp__incl.md5  swarm__master_8hpp__incl.md5  test_2main_8cpp__incl.md5  testswarm_8cpp__incl.md5
include/swarm_robots/: agent.h  agent.hpp  agent_node.h  agent_node.hpp  arena.h  arena.hpp  forward_kinematics.h  forward_kinematics.hpp  (+12 more)
launch/: demo.launch  main.launch  multi-agent.launch  single_robot.launch  spawn_jackal.launch  teleop_launch.launch
map/: Rescue_new.pgm  Rescue_new.yaml
rviz/: Rviz_config.rviz
src/: action_client.cpp  action_server.cpp  agent.cpp  agent_node.cpp  arena.cpp  forward_kinematics.cpp  inverse_kinematics.cpp  main.cpp  obstacle.cpp  path_planner.cpp  safety_check.cpp  state.cpp  swarm_master.cpp
srv/: service.srv
test/: main.cpp  test.launch  testswarm.cpp
world/: Rescue.world  Rescue_light.world  Rescue_new.world  Rescue_nolight.world  Rescue_small.world  moveworld.world
xacro/: swarm_jackal.gazebo.xacro
(+91 files in other folders)
